# iris-cicd-demo

./: .gitignore  app.py  pyproject.toml  requirements.txt  test_app.py  test_python.py
.github/workflows/: cicd.yml
