[project]
name = "iris-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
    "joblib>=1.5.2",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
]
